# ETHUSDT-price-Oracle

./: .env-sample  .gitignore  README.md  package.json
client/src/: caller-core.ts  constant.ts  helper.ts  oracle-core.ts
contracts/caller/: CallerContract.sol  EthPriceOracleInterface.sol
contracts/oracle/: CallerContractInterface.sol  EthPriceOracle.sol
scripts/: caller.ts  constant.ts  helper.ts  oracle.ts
server/: .env-sample  Cargo.toml
server/src/: contract.rs  main.rs  utils.rs
