[package]
name = "oracle-service"
version = "0.1.0"
authors = ["Leonz Chang <bellerophon00530@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers ="0.6.2"
tokio = {version = "1.17.0", features = ["macros"]}
eyre = "0.6"
serde = "1.0.136"
reqwest = "0.11.10"
dotenv = "0.15.0"